--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
             <div class="col">
                 <img src="images/work7.jpg" alt="Project image">
                 <div class="layer">
-                    <h3>Personal Portfolio</h3>
+                    <a href = "https://meghna2080.github.io/Portfolio/"><h3>Personal Portfolio</h3></a>
                     <h5><span>Tech Stack: </span>HTML, CSS & Javascript</h5>
-                    <h6><a href="">Github</a></h6>
+                    <h6><a href="https://github.com/Meghna2080/Portfolio">Github</a></h6>
                 </div>
             </div>
         </div>
