--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="col">
                 <img src="images/work7.jpg" alt="Project image">
                 <div class="layer">
-                    <a href = "https://meghna-portfolio-two.vercel.app/"><h3>Personal Portfolio</h3></a>
+                    <a href = "https://meghna-singh-portfolio.vercel.app/"><h3>Personal Portfolio</h3></a>
                     <h5><span>Tech Stack: </span>HTML, CSS & Javascript</h5>
                     <h6><a href="https://github.com/Meghna2080/Portfolio">Github</a></h6>
                 </div>
