--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="home-text">
             <h3>Hello I'm</h3>
             <h1>Meghna Singh</h1>
-            <h5>A Data Analyst & Web Developer <span>From India</span></h5>
-            <p>I'm a student of University Institute of Engineering and Technology, Panjab University, Chandigarh. I'm very passionate towards my work.</p>
+            <h5>A Patent Analyst & Web Developer <span>From India</span></h5>
+            <p>I'm a tech enthusiast and a professional IP strategist. I'm very passionate towards my work.</p>
             <div class="social">
                 <a href="https://www.facebook.com/Meghna2080/"><i class='bx bxl-facebook-circle'></i></a>
                 <a href="https://www.instagram.com/meghnas_2080/"><i class='bx bxl-instagram-alt'></i></a>
@@ -67,6 +67,10 @@
         <div class="heading"><h2><span>My </span>Skills</h2></div>
         <div class="row-2">
             <div class="skills">
+                <div class="progress">
+                    <h3>Patent Analysis<span>80%</span></h3>
+                    <div class="bar"><span></span></div>
+                </div>
                 <div class="progress">
                     <h3>C++<span>80%</span></h3>
                     <div class="bar"><span></span></div>
