--- a/index.html
+++ b/index.html
@@ -101,7 +101,14 @@
         <div class="box-container">
             <div class="box">
                 <div class="content">
-                    <span>September 2021 - Present</span>
+                    <span>June 2023 - Present</span>
+                    <h3>Greyb</h3>
+                    <p>Research Analyst</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <span>September 2021 - August 2022</span>
                     <h3>MDaRT, Design Innovation Centre, Panjab University</h3>
                     <p>Team Lead, Data Analytics</p>
                 </div>
